# obsidian-base.nvim

./: .gitignore  LICENSE  README.md  build.lua  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: releasing.md  worker-protocol.md  worker-semantics.md
docs/decisions/: rust-worker.md
fixtures/: README.md  cli-capture.example.json  cli-capture.json  manifest.json
fixtures/goldens/: daily-log-personal.json  daily-log-work.json
fixtures/overlays/: Clean kitchen.work.md
fixtures/protocol/: date-sort-vectors.json
fixtures/vault/.obsidian/: types.json
fixtures/vault/Activities/: Clean kitchen.md  Review work.md
fixtures/vault/Archive/: malformed-frontmatter.md
fixtures/vault/Bases/: Daily log tasks.base
fixtures/vault/Calendar/Daily/: 2026-07-10.md  2026-07-15.md
fixtures/vault/Encounters/: general note.md  work note.md
ftdetect/: obsidian-base.lua
lua/obsidian-base/: commands.lua  config.lua  contract.lua  coordinator.lua  embed.lua  init.lua  inspect.lua  installer.lua  picker.lua  presenter.lua  ui.lua
scripts/: architecture-check.sh  capture-cli-fixtures.lua  commands-smoke.lua  config-smoke.lua  embed-smoke.lua  metadata-check.py  native-installer-smoke.lua  picker-smoke.lua  recovery-smoke.lua  release-asset.py  verify-cli-goldens.lua  worker-smoke.lua
worker/: Cargo.toml
worker/src/: actor.rs  error.rs  expression.rs  index.rs  lib.rs  limits.rs  main.rs  markdown.rs  path.rs  protocol.rs  query.rs  service.rs  value.rs  watch.rs  yaml.rs
worker/tests/: protocol_process.rs  scale.rs  security.rs  service.rs  watcher.rs
