[package]
name = "obsidian-base-worker"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[dependencies]
jiff = { version = "0.2.15", default-features = false, features = ["std"] }
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
pulldown-cmark = { version = "0.13.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["io-std", "io-util", "macros", "rt", "sync", "time"] }
yaml-rust2 = { version = "0.10.4", default-features = false }

[dev-dependencies]
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["process"] }

[[bin]]
name = "obsidian-base-worker"
path = "src/main.rs"
